--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -45,9 +45,9 @@
     <string name="xposed_module_list_updated">Az Xposed modul lista frissült\nA változtatások újraindítás után lépnek életbe</string>
     <string name="xposed_module_updated_notification_title">Xposed modul frissítve</string>
     <string name="xposed_module_updated_notification">Újraindítás a változtatások aktiválásához</string>
-    <string name="warning_xposed_min_version">A modulhoz frissebb XposedBridge verzió (%d) szükséges, ezért nem aktiválható.</string>
-    <string name="no_min_version_specified">A modul nem tünteti fel a szükséges XposedBridge verziót.</string>
-    <string name="warning_min_version_too_low">Ez a modul a(z) %1$d verziójú XposedBridge-hoz lett készítve, de a(z) %2$d verzió összeférhetetlen változtatásai miatt le lett tiltva.</string>
+    <string name="warning_xposed_min_version">A modulhoz frissebb Xposed verzió (%d) szükséges, ezért nem aktiválható.</string>
+    <string name="no_min_version_specified">A modul nem tünteti fel a szükséges Xposed verziót.</string>
+    <string name="warning_min_version_too_low">Ez a modul a(z) %1$d verziójú Xposed-hoz lett készítve, de a(z) %2$d verzió összeférhetetlen változtatásai miatt le lett tiltva.</string>
     <string name="module_launch">UI megnyitása</string>
     <string name="module_download_updates">Letöltés/Frissítések</string>
     <string name="module_support">Támogatás</string>
