--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -22,9 +22,9 @@
     <string name="module_no_ui">Modul ini tidak ada tampilan utama</string>
     <string name="no_xposed_modules_found">Tidak ada modul Xposed detemukan!</string>
     <string name="xposed_module_list_updated">Daftar modul telah diupdate\nAkan aktif setelah reboot.</string>
-    <string name="warning_xposed_min_version">Modul ini membutuhkan XposedBridge yang lebih baru (%d) dan tidak dapat diaktifkan.</string>
-    <string name="no_min_version_specified">Modul ini tidak memberitahukan versi XposedBridge yang dibutuhkan.</string>
-    <string name="warning_min_version_too_low">Modul ini dibuat untuk XposedBridge versi %1$d, tetapi karena ketidakcocoknya di versi %2$d, maka modul dimatikan.</string>
+    <string name="warning_xposed_min_version">Modul ini membutuhkan Xposed yang lebih baru (%d) dan tidak dapat diaktifkan.</string>
+    <string name="no_min_version_specified">Modul ini tidak memberitahukan versi Xposed yang dibutuhkan.</string>
+    <string name="warning_min_version_too_low">Modul ini dibuat untuk Xposed versi %1$d, tetapi karena ketidakcocoknya di versi %2$d, maka modul dimatikan.</string>
     <string name="module_launch">Buka UI</string>
     <string name="module_download_updates">Unduhan/Update</string>
     <string name="module_support">Dukungan</string>
