--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -58,9 +58,9 @@
     <string name="xposed_module_list_updated">Zoznam Xposed modulov bol aktualizovaný\nZmeny sa prejavia po reštarte</string>
     <string name="xposed_module_updated_notification_title">Aktualizovaný Xposed modul</string>
     <string name="xposed_module_updated_notification">Reštartujte pre aktiváciu zmien</string>
-    <string name="warning_xposed_min_version">Tento modul vyžaduje novšiu verziu XposedBridge (%d) a preto nemôže byť aktivovaný.</string>
-    <string name="no_min_version_specified">Tento modul nešpecifikuje verziu XposedBridge, ktorú potrebuje.</string>
-    <string name="warning_min_version_too_low">Tento modul bol vytvorený pre verziu XposedBridge %1$d, ale kvôli nekompatibilným zmenám vo verzii %2$d bol deaktivovaný.</string>
+    <string name="warning_xposed_min_version">Tento modul vyžaduje novšiu verziu Xposed (%d) a preto nemôže byť aktivovaný.</string>
+    <string name="no_min_version_specified">Tento modul nešpecifikuje verziu Xposed, ktorú potrebuje.</string>
+    <string name="warning_min_version_too_low">Tento modul bol vytvorený pre verziu Xposed %1$d, ale kvôli nekompatibilným zmenám vo verzii %2$d bol deaktivovaný.</string>
     <string name="module_launch">Spustiť</string>
     <string name="module_download_updates">Stiahnuť/Aktualizácie</string>
     <string name="module_support">Podpora</string>
